[metadata]
name = quartr
version = attr: quartr.__version__
url = https://quart-sqlalchemy.palletsprojects.com/
author = Pallets
author_email = contact@palletsprojects.com
license = BSD-3-Clause
license_file = LICENSE.rst
description = A basic blog app built with Quart-SQLAlchemy.
long_description = file: README.rst

[options]
packages = find:
include_package_data = true
python_requires = >= 3.7
install_requires =
    Quart>=2.2
    Quart-SQLAlchemy @ file://localhost/../../dist/quart_sqlalchemy-2.0.0-py3-none-any.whl
    SQLAlchemy>=1.4.35

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = quartr
